# mercator-presence

./: .env.example  .gitignore  Cargo.toml  README.md  prompt-codex-mercator-agent.md  skills-lock.json
apps/mercator-agent/: Cargo.toml  README.md  build.rs
apps/mercator-agent/src/: api.rs  app.rs  cli.rs  config.rs  embedded.rs  logging.rs  main.rs  security.rs  types.rs
apps/mercator-agent/src/collector/: battery.rs  mod.rs  network.rs  system.rs  user.rs
apps/mercator-agent/src/crypto/: location.rs  mod.rs  signing.rs
apps/mercator-agent/src/service/: mod.rs  windows.rs
