[package]
name = "mercator-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
directories = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.39.3"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "serde", "serde-well-known"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(not(windows))'.dependencies]
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }

[target.'cfg(windows)'.dependencies]
reqwest = { version = "0.12.28", default-features = false, features = ["json", "native-tls"] }
windows-service = "0.8.1"
